--- a/public_html/cs/estilos.css
+++ b/public_html/cs/estilos.css
@@ -1,10 +1,44 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 14/03/2016, 03:24:50 PM
-    Author     : alum.fial1
-*/
-
+*{
+    margin: 0 auto;
+}
+header{
+    width: 100%;
+    height: 80px;
+    background: #cc0033;
+    font-family: cursive;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    border: 1px solid #cccccc;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+nav {
+    background-color: #FF0;
+    margin: 0;
+    overflow: hidden;
+    height: 30px;
+    margin-bottom: 300px;
+}
+nav ul{
+    margin: 0;
+    padding: 0;
+}
+nav ul li {
+     display: inline-block;
+    list-style-type: none;
+}
+nav > ul > li > a {
+    color: #aaa;
+    background-color:#FF0;
+    display: block;
+    line-height: 2em;
+    padding: 0.5em 0.5em;
+    text-decoration: none;
+}
+footer{
+    width: 100%;
+    height: 50px;
+    background: #666666;
+    color: white;
+}
